--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -93,6 +93,7 @@ $gutter: 6px;
     margin: 0 0 15px 0;
     font-size: 1.3em;
     font-weight: 800;
+    font-family: $font-primary-family;
     letter-spacing: -0.01em;
     @include mdc-layout-grid-media-query_("phone") {
       font-size: 24px;
