--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -8,121 +8,99 @@
 
 
 <div class="me-feed me-page__section">
-  <% if params[:q] %>
-    <%= render partial: "components/collection/collection",
-               locals:  {
-                   items:      @items[:user],
-                   title:      {
-                       principal: "Eventos encontrados para \"#{params[:q]}\""
-                   },
-                   identifier: 'busca',
-                   opts:       {
-                       type:    :large,
-                       filters: {
-                           categories: true,
-                           kinds:      true,
-                           ocurrences: true
-                       },
-                       detail:  @items[:user][:detail],
-                       origin:  :feed
-                   }
-               } %>
 
-  <% else %>
-    <% if current_user&.personas_assortment_finished? %>
-      <% if @items.dig(:today, :detail, :total_events_in_collection).try {|counter| counter > 0} %>
-        <%= render partial: "components/collection/collection",
-                   locals:  {
-                       items:      @items[:today],
-                       title:      {
-                           principal: "Eventos acontecendo esta semana",
-                           secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 6, format: :week)} (#{I18n.l(Date.today + 6, format: :short)})"
-                       },
-                       identifier: 'this-week',
-                       opts:       {
-                           type:    :large,
-                           filters: {
-                               categories: true,
-                               kinds:      true,
-                               ocurrences: true
-                           },
-                           detail:  @items[:today][:detail],
-                           origin:  :feed
-                       }
-                   } %>
-      <% end %>
-      <% if current_user && @items.dig(:follow, :detail, :total_events_in_collection).try {|counter| counter > 0} %>
-        <%= render partial: "components/collection/collection",
-                   locals:  {
-                       items:      @items[:follow],
-                       title:      {
-                           principal: "Tópicos que você segue",
-                           secondary: "Explore os eventos de organizadores, locais e tags que você segue como #{current_user.following_topics(only: :name, as: :list, size: 3)}".html_safe
-                       },
-                       identifier: 'follow',
-                       opts:       {
-                           type:    :large,
-                           filters: {
-                               categories: true,
-                               kinds:      true,
-                               ocurrences: true
-                           },
-                           detail:  @items[:follow][:detail],
-                           origin:  :feed
-                       }
-                   } %>
-      <% end %>
+  <% if current_user&.personas_assortment_finished? %>
+    <% if @items.dig(:week, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+      <%= render partial: "components/collection/collection",
+                 locals:  {
+                     items:      @items[:week],
+                     title:      {
+                         principal: "Eventos acontecendo esta semana",
+                         secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 6, format: :week)} (#{I18n.l(Date.today + 6, format: :short)})"
+                     },
+                     identifier: 'this-week',
+                     opts:       {
+                         type:    :large,
+                         filters: {
+                             categories: true,
+                             kinds:      true,
+                             ocurrences: true
+                         },
+                         detail:  @items[:week][:detail],
+                         origin:  :feed
+                     }
+                 } %>
+    <% end %>
+    <% if current_user && @items.dig(:follow, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+      <%= render partial: "components/collection/collection",
+                 locals:  {
+                     items:      @items[:follow],
+                     title:      {
+                         principal: "Tópicos que você segue",
+                         secondary: "Explore os eventos de organizadores, locais e tags que você segue como #{current_user.following_topics(only: :name, as: :list, size: 3)}".html_safe
+                     },
+                     identifier: 'follow',
+                     opts:       {
+                         type:    :large,
+                         filters: {
+                             categories: true,
+                             kinds:      true,
+                             ocurrences: true
+                         },
+                         detail:  @items[:follow][:detail],
+                         origin:  :feed
+                     }
+                 } %>
+    <% end %>
 
 
-      <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try {|counter| counter > 0} %>
-        <%= render partial: "components/collection/collection",
-                   locals:  {
-                       items:      @items[:user_suggestions],
-                       title:      {
-                           principal: "Indicados para #{current_user.name}",
-                           secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
-                       },
-                       identifier: 'user-suggestions',
-                       opts:       {
-                           type:    :large,
-                           filters: {
-                               categories: true,
-                               kinds:      false,
-                               ocurrences: true
-                           },
-                           detail:  @items[:user_suggestions][:detail],
-                           origin:  :feed
-                       }
-                   } %>
+    <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+      <%= render partial: "components/collection/collection",
+                 locals:  {
+                     items:      @items[:user_suggestions],
+                     title:      {
+                         principal: "Indicados para #{current_user.name}",
+                         secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
+                     },
+                     identifier: 'user-suggestions',
+                     opts:       {
+                         type:    :large,
+                         filters: {
+                             categories: true,
+                             kinds:      false,
+                             ocurrences: true
+                         },
+                         detail:  @items[:user_suggestions][:detail],
+                         origin:  :feed
+                     }
+                 } %>
 
-      <% end %>
-
-
-      <% if @items.dig(:user_personas, :detail, :total_events_in_collection).try {|counter| counter > 0}  %>
-
-        <%= render partial: "components/collection/collection",
-                   locals:  {
-                       items:      @items[:user_personas],
-                       title:      {
-                           principal: "Gostos parecidos",
-                           secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
-                       },
-                       identifier: 'user-personas',
-                       opts:       {
-                           type:    :large,
-                           filters: {
-                               categories: true,
-                               kinds:      false,
-                               ocurrences: true
-                           },
-                           detail:  @items[:user_personas][:detail],
-                           origin:  :feed
-                       }
-                   } %>
+    <% end %>
 
 
-      <% end %>
+    <% if @items.dig(:user_personas, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+
+      <%= render partial: "components/collection/collection",
+                 locals:  {
+                     items:      @items[:user_personas],
+                     title:      {
+                         principal: "Gostos parecidos",
+                         secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
+                     },
+                     identifier: 'user-personas',
+                     opts:       {
+                         type:    :large,
+                         filters: {
+                             categories: true,
+                             kinds:      false,
+                             ocurrences: true
+                         },
+                         detail:  @items[:user_personas][:detail],
+                         origin:  :feed
+                     }
+                 } %>
+
+
     <% end %>
   <% end %>
-
 </div>
