--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -10,7 +10,9 @@
 <!--    </div>-->
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="this-week">
       <div class="me-float-menu__icon">
-        <i class="material-icons">today</i>
+        <i class="material-icons">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"/></svg>
+        </i>
       </div>
       <div class="me-float-menu__label">
         Esta semana
@@ -18,7 +20,9 @@
     </div>
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="follow">
       <div class="me-float-menu__icon">
-        <i class="material-icons">add_box</i>
+        <i class="material-icons">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-3 10h-3v3c0 .55-.45 1-1 1s-1-.45-1-1v-3H8c-.55 0-1-.45-1-1s.45-1 1-1h3V8c0-.55.45-1 1-1s1 .45 1 1v3h3c.55 0 1 .45 1 1s-.45 1-1 1z"/></svg>
+        </i>
       </div>
       <div class="me-float-menu__label">
         Tópicos seguidos
@@ -26,7 +30,9 @@
     </div>
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="user-suggestions">
       <div class="me-float-menu__icon">
-        <i class="material-icons">how_to_reg</i>
+        <i class="material-icons">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 20l-.86-.86c-1.18-1.18-1.17-3.1.02-4.26l.84-.82c-.39-.04-.68-.06-1-.06-2.67 0-8 1.34-8 4v2h9zm-1-8c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4"/><path d="M16.18 19.78c-.39.39-1.03.39-1.42 0l-2.07-2.09c-.38-.39-.38-1.01 0-1.39l.01-.01c.39-.39 1.02-.39 1.4 0l1.37 1.37 4.43-4.46c.39-.39 1.02-.39 1.41 0l.01.01c.38.39.38 1.01 0 1.39l-5.14 5.18z"/></svg>
+        </i>
       </div>
       <div class="me-float-menu__label">
         Indicados para você
@@ -34,7 +40,9 @@
     </div>
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="user-personas">
       <div class="me-float-menu__icon">
-        <i class="material-icons">people</i>
+        <i class="material-icons">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V18c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-1.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05.02.01.03.03.04.04 1.14.83 1.93 1.94 1.93 3.41V18c0 .35-.07.69-.18 1H22c.55 0 1-.45 1-1v-1.5c0-2.33-4.67-3.5-7-3.5z"/></svg>
+        </i>
       </div>
       <div class="me-float-menu__label">
         Gostos parecidos
