--- a/web/app/views/components/follow/_follow-chip-set.html.erb
+++ b/web/app/views/components/follow/_follow-chip-set.html.erb
@@ -9,7 +9,12 @@
        data-target="follow-chipset.trailing"
        role="button"
        tabindex="0"
-       title="Siga o tópico '<%= followable.details['name'] %>'"><%= user.following?(followable) ? 'check' : 'add' %>
+       title="Siga o tópico '<%= followable.details['name'] %>'">
+      <% if user.following?(followable)  %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M9 16.17L5.53 12.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L9 16.17z"/></svg>
+      <% else %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"/></svg>
+      <% end %>
     </i>
   <% end %>
   <%= link_to organizer_path(followable) do %>
