--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -8,9 +8,9 @@
     <% if current_user and !current_user.taste_events_saved.empty? %>
       <h2 data-target="saves.header" class="">
         Eventos salvos
-        <i class="material-icons">
-          chevron_right
-        </i>
+<!--        <i class="material-icons">-->
+<!--          chevron_right-->
+<!--        </i>-->
       </h2>
       <div class="me-icon__group">
         <div data-target="saves.scrollLeft" data-action="click->saves#scrollLeft"
@@ -70,7 +70,7 @@
           <% if saved_events.size < 6 %>
             <div class="me-saves__empty">
               <i class="material-icons-sharp sentiment-satisfied">
-                sentiment_satisfied
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><circle cx="15.5" cy="9.5" r="1.5"/><circle cx="8.5" cy="9.5" r="1.5"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4.41-6.11c-.35-.22-.82-.11-1.03.24-.74 1.17-2 1.87-3.38 1.87s-2.64-.7-3.38-1.88c-.22-.35-.68-.46-1.03-.24-.35.22-.46.68-.24 1.03C8.37 16.54 10.1 17.5 12 17.5s3.63-.97 4.65-2.58c.22-.35.11-.81-.24-1.03z"/></svg>
               </i>
               <span>Explore as coleções de eventos abaixo e os salve para ver aqui.</span>
             </div>
