--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -65,8 +65,8 @@
     }
 
     & .me-card__like-button {
-      top: 2px;
-      right: 2px;
+      top: 0;
+      right: 0;
     }
 
     & .mdc-layout-grid__cell {
