Change primary font to varela round

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -9,7 +9,7 @@ $like-color: $brand-color;
 $dislike-color: #8F1717;
 $maybe-color: $border-color;
 
-$font-primary-family: 'Montserrat', sans-serif;
+$font-primary-family: 'Varela Round', sans-serif;
 $font-secondary-family: 'Roboto', sans-serif;
 
 $section-padding-phone: 20px;
