--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -1,4 +1,3 @@
-
 <%
 
   raise ArgumentError unless identifier && items && title
@@ -22,10 +21,10 @@
   <div class="me-feed__section-head">
     <h2>
       <%= title[:principal] %>
-      <span>
-        <%= title[:secondary] %>
-      </span>
     </h2>
+    <div class="me-feed__section-title-secondary">
+      <%= title[:secondary] %>
+    </div>
     <% if filters %>
       <div class="me-filter"
            data-controller="filter"
@@ -34,16 +33,16 @@
            data-filter-init-filters-applyed="<%= filters_applyed.to_json %>"
            data-filter-origin="<%= opts[:origin] %>"
            data-target="filter.filterContainer section.filter">
-          <% if filters[:categories] && !items[:categories].blank? %>
-            <%# cache [items[:categories], params[:categories]], {expires_in: 1.day} do %>
-              <%= render(partial: 'feeds/filter', locals: {
-                  initial_filters:              items[:categories],
-                  params_filters:               params[:categories],
-                  filters_that_exist_in_events: items[:categories],
-                  icon_type:                    'filter_list',
-                  type:                         'categories'
-              },
-              cached: true) %>
+        <% if filters[:categories] && !items[:categories].blank? %>
+          <%# cache [items[:categories], params[:categories]], {expires_in: 1.day} do %>
+          <%= render(partial: 'feeds/filter', locals: {
+              initial_filters:              items[:categories],
+              params_filters:               params[:categories],
+              filters_that_exist_in_events: items[:categories],
+              icon_type:                    'filter_list',
+              type:                         'categories'
+          },
+                     cached:  true) %>
           <%# end %>
         <% end %>
         <% if (filters[:kinds] && params[:categories] && !items[:kinds].blank?) || (filters[:kinds] && !params[:kinds].blank?) %>
@@ -54,8 +53,9 @@
               icon_type:                    'filter_list',
               type:                         'kinds'
           },
-          cached: true) %>
+                     cached:  true) %>
         <% end %>
+        <!-- TODO: remover duplicado-->
         <% if filters[:ocurrences] && !items[:ocurrences].blank? %>
           <%= title[:ocurrences] %>
           <%= render(partial: 'feeds/filter', locals: {
@@ -65,7 +65,7 @@
               icon_type:                    '',
               type:                         'ocurrences'
           },
-          cached: true) %>
+                     cached:  true) %>
         <% end %>
       </div>
     <% end %>
@@ -76,20 +76,20 @@
          data-target="section.scrollContainer">
       <% unless items.empty? %>
         <%# cache [identifier, items[:events]], {expires_in: 1.day} do %>
-          <%= render(partial: 'components/collection/event', collection: items[:events], as: :event, locals: {
-              identifier:   identifier,
-              json_request: json_request
-          },
-          cached: false) %>
+        <%= render(partial: 'components/collection/event', collection: items[:events], as: :event, locals: {
+            identifier:   identifier,
+            json_request: json_request
+        },
+                   cached:  false) %>
         <%# end %>
 
         <%# cache [params[:similar], items[:events]], {expires_in: 1.day} do %>
-          <%= render(partial: 'components/collection/similar', locals: {
-              events:       items[:events],
-              identifier:   identifier,
-              json_request: json_request
-          },
-          cached: true) if !mobile_device? || !['feed'].include?(opts[:origin]) %>
+        <%= render(partial: 'components/collection/similar', locals: {
+            events:       items[:events],
+            identifier:   identifier,
+            json_request: json_request
+        },
+                   cached:  true) if !mobile_device? || !['feed'].include?(opts[:origin]) %>
         <%# end %>
 
         <% if actual_events_in_collection < total_events_in_collection && mobile_device? %>
@@ -125,7 +125,7 @@
         events:     items[:events],
         identifier: identifier
     },
-    cached: true) if mobile_device? && ['feed'].include?(opts[:origin]) %>
+               cached:  true) if mobile_device? && ['feed'].include?(opts[:origin]) %>
     <% if actual_events_in_collection < total_events_in_collection %>
       <div class="me-feed__load-more"
            data-action="click->section#loadMore"
